name:                yesod-fay
version:             0.8.2
synopsis:            Utilities for using the Fay Haskell-to-JS compiler with Yesod.
description:         For initial discussion, see <http://www.yesodweb.com/blog/2012/10/yesod-fay-js>. This is a work-in-progress.
homepage:            https://github.com/fpco/yesod-fay
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman,Manuel Schneckenreither
maintainer:          michael@snoyman.com, manuel.schneckenreither@uibk.ac.at
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     Yesod.Fay
                       Fay.Yesod
  other-modules:       Yesod.Fay.Data
  build-depends:       base >= 4.8 && < 4.11
                     , fay >= 0.23.0.0
                     , fay-dom >= 0.5.0.1
                     , transformers >= 0.2
                     , aeson >= 0.6
                     , bytestring >= 0.9
                     , data-default >= 0.4
                     , directory >= 1.1.0.2
                     , text >= 0.11
                     , template-haskell
                     , process
                     , shakespeare
                     , yesod-core < 1.6
                     , yesod-form >= 1.4
                     , yesod-static >= 1.4
                     , pureMD5 >= 2.1.2.1
                     , utf8-string >= 0.3.7
                     , monad-loops >= 0.3.3.0
                     , filepath
